fix: change idTable param to query
